# 22202-ROZHKOV-OOP-CPP

task-0/: CSVWriter.cpp  CSVWriter.h  FileReader.cpp  FileReader.h  LineParser.cpp  LineParser.h  StatCollector.cpp  StatCollector.h  main.cpp
task-0/Google_tests/: CSVWriterTest.cpp  FileReaderTest.cpp  LineParserTest.cpp  StatCollectorTest.cpp
task-1/: BitArray.cpp  BitArray.h  CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.h
task-1/Google_tests/: BitArrayTest.cpp  CircularBufferTest.cpp
task-2/: CMakeLists.txt  main.cpp
task-2/Google_tests/: CMakeLists.txt  GameMechanicsTest.cpp  SimpleTest.cpp
task-2/games/: test.lif
task-2/games/examples/: eight.lif  flipper.lif  glider.lif  heptomino.lif  jellyfish.lif  ship.lif
task-2/header/: Action.h  Actions.h  ArgHandler.h  ConfigManager.h  ConsoleInput.h  ConsoleScreen.h  Engine.h  Executor.h  Field.h  FileReader.h  FileWriter.h  Input.h  InputManager.h  LineParser.h  Rule.h  Screen.h
task-2/source/: Action.cpp  Actions.cpp  ArgHandler.cpp  ConfigManager.cpp  ConsoleInput.cpp  ConsoleScreen.cpp  Engine.cpp  Field.cpp  FileReader.cpp  FileWriter.cpp  InputManager.cpp  LineParser.cpp  Rule.cpp
task-3/: CMakeLists.txt  config.txt  main.cpp
task-3/Google_tests/: ArgHandlerTest.cpp  CMakeLists.txt  SampleTest.cpp  test.cpp
task-3/header/: ArgHandler.h  ConfigManager.h  ConversionManager.h  Converter.h  ConverterFabric.h  FileReader.h  LineParser.h  Sample.h  SampleStream.h  SoundProcessor.h  WAVWrapper.h
task-3/header/Converters/: Converter.h  ConverterFabric.h  ConverterFade.h  ConverterFadeFabric.h  ConverterMix.h  ConverterMixFabric.h  ConverterMute.h  ConverterMuteFabric.h  ConverterReverb.h  ConverterReverbFabric.h
task-3/header/errors/: FileError.h  InputFileTypeError.h  OutOfRangeStreamIdError.h  SoundProcessingError.h  WrongArgumentsError.h
task-3/source/: ArgHandler.cpp  ConfigManager.cpp  FileReader.cpp  LineParser.cpp  Sample.cpp  SoundProcessor.cpp  WAVWrapper.cpp
task-3/source/Converters/: ConverterFade.cpp  ConverterFadeFabric.cpp  ConverterMix.cpp  ConverterMixFabric.cpp  ConverterMute.cpp  ConverterMuteFabric.cpp  ConverterReverb.cpp  ConverterReverbFabric.cpp
task-3/source/errors/: InputFileTypeError.cpp
task-4/: CMakeLists.txt  CSVParser.cpp  CSVParser.h  main.cpp  test.csv  test2.csv
task-4/errors/: CSVError.cpp  CSVError.h
